--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>My First Webpage</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Portfolio</title>
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <div class="header"></div>
+
+    <div class="content">
+        <img class="logo" src="./image/logo.png">
+
+        <ul>
+            <li>About</li>
+            <li>Experiences</li>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+
+    <div class="footer"></div>
   </body>
 </html>
