Styled and created classes for the header

--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
   </head>
 
   <body>
-    <div class="header"></div>
-
-    <div class="content">
+    <div class="header">
         <img class="logo" src="./image/logo.png">
 
-        <ul>
-            <li>About</li>
-            <li>Experiences</li>
-            <li>Projects</li>
-            <li>Contact</li>
+        <ul class="header-links">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Experiences</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </div>
 
-    <div class="footer"></div>
+    <div class="content">
+
+    </div>
+
+    <div class="footer">
+        <img class="footer-img" src="./image/icons8-linkedin-48.png" alt="">
+    </div>
   </body>
 </html>
