--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </div>
 
     <div class="content">
+        <div class="title-container">
+            <div class="title">This Website is awesaome</div>
+            <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button>Sign up</button>
+        </div>
+        <img class="title-pic" src="./image/title-pic.jpeg">
 
     </div>
 
