Changed and styled the title part and included a picture

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="header">
-        <img class="logo" src="./image/logo.png">
+        <h1 class="logo">Header Logo</h1>
 
         <ul class="header-links">
             <li><a href="#">About</a></li>
@@ -25,6 +25,11 @@
             <button>Sign up</button>
         </div>
         <img class="title-pic" src="./image/title-pic.jpeg">
+    </div>
+
+    <div class="project">Test out the projects below</div>
+    <div class="project-cards">
+        <img src="./image/HD-wallpaper-vector-sunset-nature-sunset-illustration-vector.jpeg">
 
     </div>
 
