Added html and css for the project section. Also added the images to the folders used in the card section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,25 @@
 
     <div class="project">Test out the projects below</div>
     <div class="project-cards">
-        <img src="./image/HD-wallpaper-vector-sunset-nature-sunset-illustration-vector.jpeg">
+        <div class="card">
+            <img class="card-img" src="./image/HD-wallpaper-vector-sunset-nature-sunset-illustration-vector.jpeg">
+            <p>Wow, very nice, supppppper. Beautiful picture.</p>
+        </div>
 
+        <div class="card">
+            <img class="card-img" src="./image/neon.jpeg" alt="">
+            <p>This sunset is such wow, very good vibes. The is insightful subtext dude, expand your mind!</p>
+        </div>
+
+        <div class="card">
+            <img class="card-img" src="./image/mountain.jpeg" alt="">
+            <p>This is some other subtext under an illustration or image</p>
+        </div>
+
+        <div class="card">
+            <img class="card-img" src="./image/lake.jpeg" alt="">
+            <p>Blue cool lake, man fishing on a boat. Sunrise morning, breakfast with some oats.</p>
+        </div>
     </div>
 
     <div class="footer">
