Added html and css for the quote section. Includes quote and the person that said it

--- a/index.html
+++ b/index.html
@@ -49,9 +49,24 @@
             <p>Blue cool lake, man fishing on a boat. Sunrise morning, breakfast with some oats.</p>
         </div>
     </div>
+    <div class="quote-container">
+        <div class="quote">
+            “We do have a lot in common, the same earth, the same air, the same sky. 
+            Maybe if we started looking at what's the same instead of always looking at what's different...well who knows?”
+        </div>
+        <div class="name">-Mewoth, A Pokémon</div>
+    </div>
+
+    <div class="action">
+        <div class="action-content">Call to action! It's time!</div>
+        <div>Click to contact our team for inqueries or questions regarding our services!</div>
+        <button class="sign-up">Sign up</button>
+    </div>
+
 
     <div class="footer">
         <img class="footer-img" src="./image/icons8-linkedin-48.png" alt="">
     </div>
+
   </body>
 </html>
