Added html and css for the action section and the footer.

--- a/index.html
+++ b/index.html
@@ -57,15 +57,19 @@
         <div class="name">-Mewoth, A Pokémon</div>
     </div>
 
-    <div class="action">
-        <div class="action-content">Call to action! It's time!</div>
-        <div>Click to contact our team for inqueries or questions regarding our services!</div>
-        <button class="sign-up">Sign up</button>
+    <div class="action-section">
+        <div class="action-container">
+            <div class="word-content">
+                <div class="action-title">Call to action! It's time!</div>
+                <div class="action-subtext">Click to contact our team for inqueries or questions regarding our services!</div>
+            </div>
+
+            <button class="sign-up">Sign up</button>
+        </div>
     </div>
 
-
     <div class="footer">
-        <img class="footer-img" src="./image/icons8-linkedin-48.png" alt="">
+        Copyright &#169; The Odin Project 2022
     </div>
 
   </body>
